[package]
name = "green_copper_cmd"
version = "0.1.0"
authors = ["Andries Hiemstra <info@hirofa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

green_copper_runtime =  { git = 'https://github.com/HiRoFa/GreenCopperRuntime', branch="main", features = ["all"]}
#green_copper_runtime =  { path = '../GreenCopperRuntime', features = ["all"]}
quickjs_runtime = "0.7"
hirofa_utils = "0.4"
#quickjs_runtime =  { path = '../quickjs_es_runtime'}
#quickjs_runtime = { git = 'https://github.com/HiRoFa/quickjs_es_runtime' }
#hirofa_utils = { git = 'https://github.com/HiRoFa/utils' }
typescript_utils = { git = 'https://github.com/HiRoFa/typescript_utils', branch='main'}
log = "0.4"
simple_logger = "1.3.0"
cmdparser = "0.2.0"
rustyline = "6.3.0"
futures = "0.3.17"

[[bin]]
name = "greco"
path = "src/main.rs"