[package]
name = "green_copper_cmd"
version = "0.1.0"
authors = ["Andries Hiemstra <info@hirofa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

green_copper_runtime =  { git = 'https://github.com/HiRoFa/GreenCopperRuntime', branch="main", features = ["all"]}
#green_copper_runtime =  { path = '../GreenCopperRuntime', features = ["all"]}
quickjs_runtime = "0.11"
#quickjs_runtime =  { path = '../quickjs_es_runtime', features=["default", "typescript"]}
#quickjs_runtime = { git = 'https://github.com/HiRoFa/quickjs_es_runtime' }
#hirofa_utils = "0.6"
#hirofa_utils = { git = 'https://github.com/HiRoFa/utils' }
#typescript_utils = { git = 'https://github.com/HiRoFa/typescript_utils', branch='main'}
#typescript_utils = { path = '../typescript_utils'}
log = "0.4"
simple_logger = {version = "4", features = []}
cmdparser = "0.2.0"
rustyline = "11"
futures = "0.3"
backtrace = "0.3.67"


[[bin]]
name = "greco"
path = "src/main.rs"